--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>MY FIRST WEBSITE</title>
 </head>
 <body>
+  <img src="wallpaperflare.com_wallpaper.jpg" width="500" height="500" />
   <p>this is testing</p>
   <p>welcome to my web page</p>
   <b>in this page i test what i learn</b>
