--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <title>MY FIRST WEBSITE</title>
 </head>
 <body>
-  <img src="wallpaperflare.com_wallpaper.jpg" width="500" height="500" />
   <p>this is testing</p>
   <p>welcome to my web page</p>
   <b>in this page i test what i learn</b>
   <p>now time to host</<p>
+  <p>its me samurai from pakistan,kpk ,karak</p>
+  <p>currently iam learning programing languages and web development</p>
 </body>
